2014-07-09  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (formatType): Don't enter impementation type
	into type->name map.  That could overwrite an existing entry,
	and doesn't seem right anyway.

2014-07-05  Per Bothner  <per@bothner.com>

	* lang/Quote.java (expand): Re-do handling of quasiquoted vectors
	with splicing - use new MakeSplice functionality.

2014-07-03  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define R7RS functions floor/,
	floor-quotient, floor-remainder, truncate/, truncate-quotient,
	and truncate-remainder.

2014-07-02  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'exact-integer?'.

	* standard/Scheme.java: Update read-char and peek-char.
	* standard/SchemeCompilation.java (checkDefaultBinding): For now at
	least doesn't allow "re-interpret primitive type" conversions using
	'->TYPE', only using 'as'.
	only explicit 'as' but not '->TYPE'
	* standard/readchar.java: Removed - no longer used.
	* Makefile.am: Update accordingly.

2014-06-30  Per Bothner  <per@bothner.com>

	* SourceType.java: New annotation type.
	* SourceMethodType.java: New annotation type.
	* Makefile.am: Update accordingly.

2014-06-28  Per Bothner  <per@bothner.com>

	* lang/Syntax.java(rewriteForm(Object,Translator)):
	Remove no-longer-unused method.
	* lang/Macro.java: Likewise.
	(rewriteForm(Pair,Translator)): Simple inlining.  It's a slight
	optimization; more valuable is it makes stack traces less verbose.

2014-06-07  Per Bothner  <per@bothner.com>

	Allow associating a syntax transformer with a procedure.
	* lang/Lambda.java (rewriteAttrs): Allow unknown properties.
	* lang/Macro.java (<init>): Don't quote expander if it's an Expression.
	* lang/Translator.java (rewrite_pair): Check for 'equivalent-syntax'
	property of Procedure.

2014-06-04  Per Bothner  <per@bothner.com>

	* standard/define.java: Now also used to implement define-procedure.
	This allows some tweaks and optimizations.
