@@ -1,3 +1,7 @@
+2014-07-13  Per Bothner  <per@bothner.com>
+
+	* standard/module_name.scm: Allow R6RS/R7RS-style library name as list.
+
 2014-07-09  Per Bothner  <per@bothner.com>
 
 	* standard/Scheme.java (formatType): Don't enter impementation type
